<resources>
    <string name="app_name">Swoosh</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_dominate_the_league"><![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="background_image">Background image</string>
    <string name="app_logo">App logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="next">Next</string>
    <string name="mens">MENS</string>
    <string name="mens1">MENS</string>
    <string name="mens2">MENS</string>
    <string name="womens">WOMENS</string>
    <string name="womens1">WOMENS</string>
    <string name="womens2">WOMENS</string>
    <string name="co_ed">CO-ed</string>
    <string name="co_ed1">CO-ed</string>
    <string name="co_ed2">CO-ed</string>
    <string name="background_image1">Background image</string>
    <string name="app_logo1">App logo</string>
    <string name="get_started">GET STARTED</string>
    <string name="background_image2">Background image</string>
    <string name="finish">FINISH</string>
    <string name="i_am_a">I am a</string>
    <string name="beginner">Beginner</string>3
    <string name="beginner1">Beginner</string>
    <string name="beginner2">Beginner</string>
    <string name="baller3">Baller</string>
    <string name="baller4">Baller</string>
    <string name="baller5">Baller</string>
    <string name="baller">BALLER</string>
    <string name="baller1">BALLER</string>
    <string name="baller2">BALLER</string>
</resources>
